# music-intel-mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  pr-body-check.yml
schemas/: root_profile.v0.example.json
src/music_intel_mcp/: __init__.py  __main__.py  analyzer.py  audio.py  cli.py  identity.py  ingest.py  models.py  scene.py  shared_store.py  store.py  temporal.py  validation.py
supabase/migrations/: 20260609000000_shared_metadata.sql
tests/: conftest.py  test_analyzer.py  test_audio.py  test_cli.py  test_identity.py  test_ingest.py  test_invariants.py  test_models.py  test_scene.py  test_shared_store.py  test_smoke.py  test_store.py  test_temporal.py  test_validation.py
tests/fixtures/: history_sample.jsonl  isrc_mbid_index.tsv
