[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "music-intel-mcp"
version = "0.0.1"
description = "Track-level anti-bubble music recommender with MCP surface for Jarvis."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Osasuwu" }
]
keywords = ["music", "recommendation", "mcp", "anti-bubble", "lastfm", "spotify", "musicbrainz"]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "python-dotenv>=1.0.1",
  "pydantic>=2.7",
  # Numeric + clustering backend for the audio root pipeline (#63). HDBSCAN is
  # locked by decision 01ba9bb7; scikit-learn>=1.3 ships sklearn.cluster.HDBSCAN
  # (no separate hdbscan package needed, keeps the tree to numpy/scipy).
  "numpy>=1.26",
  "scikit-learn>=1.3",
  # KS-test for sliding-window epoch detection (#65). Already pulled in
  # transitively by scikit-learn; declared explicitly because temporal.py
  # imports scipy.stats.ks_2samp directly (exact p-values beat re-deriving the
  # Kolmogorov distribution by hand — decision 00f7e1eb).
  "scipy>=1.11",
  # IFTTT history arrives as .xlsx workbooks (#76); openpyxl is the reader for
  # the import-ifttt adapter. Pure-Python, small tree (et-xmlfile only).
  "openpyxl>=3.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.3",
  "pre-commit>=3.6",
]
# Production shared-metadata store. Network-only (SupabaseSharedStore); CI uses
# the in-memory store, so this stays out of the default/dev install.
supabase = [
  "supabase>=2.0",
]

[project.scripts]
music-intel = "music_intel_mcp.cli:main"

[project.urls]
Homepage = "https://github.com/Osasuwu/music-intel-mcp"
Issues = "https://github.com/Osasuwu/music-intel-mcp/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"
# Source roots so isort classifies the package as first-party deterministically
# across ruff versions (otherwise local/CI can disagree on import ordering).
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]

[tool.ruff.lint.isort]
known-first-party = ["music_intel_mcp"]
